--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset='UTF-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <title>A.Flowers Frontend Developer Portfolio</title>
+    <title>Цветков Александр | Фронтенд портфолио</title>
+    <link rel="icon" href="/favicon.svg">
 </head>
 <body>
     <div id='root'></div>
